--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ Side bar
 .sidebar {
   display: block;
   z-index: 2;
-  width: 40%;
+  width: 30%;
   height: 100%;
   font-size: 2rem;
   background: white;
@@ -40,12 +40,15 @@ Top menu
 */
 .top-menu {
   z-index: 1;
+  top: 0;
+  display: block;
   position: sticky;
+  background: white;
 }
-.top-wrapper {
+/* .top-wrapper {
   max-width: 1200px;
   margin: auto;
-}
+} */
 .menu-left {
   float: left;
 }
@@ -65,13 +68,17 @@ photo grid
 ==========
 */
 .photo-grid-container {
-  width: 100%;
+  width: 1168px;
+  margin: auto;
   display: grid;
   grid-template-columns: repeat(4, 25%);
   grid-template-rows: 1fr 1fr;
+  gap: 1rem;
 }
 .card-img {
   width: 100%;
+  /* width: 207.734px;
+  height: 311.594px; */
   object-fit: cover;
 }
 .card-heading {
