--- a/styles.css
+++ b/styles.css
@@ -33,12 +33,19 @@ Side bar
 .bar-item:hover {
   background: grey;
 }
+.nav-btn {
+  cursor: pointer;
+}
+.menu-left:hover {
+  background: grey;
+}
 /* 
 ==========
 Top menu 
 ==========
 */
 .top-menu {
+  width: 100%;
   z-index: 1;
   top: 0;
   display: block;
@@ -57,6 +64,7 @@ Top menu
 }
 .menu-center {
   text-align: center;
+  margin: 0;
 }
 .menu-item {
   padding: 1rem;
@@ -68,7 +76,7 @@ photo grid
 ==========
 */
 .photo-grid-container {
-  width: 1168px;
+  max-width: 1168px;
   margin: auto;
   display: grid;
   grid-template-columns: repeat(4, 25%);
@@ -92,13 +100,39 @@ photo grid
 Pagination 
 ==========
 */
-
+.pagination {
+  text-align: center;
+  margin: 4rem auto;
+}
+.pagination a {
+  color: black;
+  padding: 1rem;
+}
+.pagination a:hover {
+  color: white;
+  background: black;
+}
 /* 
 ==========
 about section
 ==========
 */
+.about-section {
+  text-align: center;
+}
+.about-heading {
+}
+.about-img-container {
+  max-width: 800px;
+  margin: auto;
+  margin-top: 1rem;
+  width: 100%;
+}
 
+.about-img {
+  width: 100%;
+  object-fit: cover;
+}
 /* 
 ==========
 Footer
