--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@
 a {
   text-decoration: none;
 }
+li {
+  list-style: none;
+}
 /* 
 ==========
 Side bar
@@ -130,8 +133,7 @@ about section
 .about-section {
   text-align: center;
 }
-.about-heading {
-}
+
 .about-img-container {
   max-width: 800px;
   margin: auto;
@@ -145,9 +147,15 @@ about section
 }
 .about-text {
   margin: auto;
-  max-width: 500px;
+  max-width: 700px;
   display: block;
   text-align: center;
+}
+.about-text h2 {
+  margin: 2rem 0;
+}
+.about-text h4 {
+  margin-bottom: 1rem;
 }
 /* 
 ==========
@@ -158,4 +166,26 @@ Footer
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   place-items: center;
+  margin-top: 2rem;
+}
+.footer-left {
+  text-align: left;
+}
+.footer-center {
+  text-align: left;
+}
+.footer-right span {
+  background: black;
+  color: white;
+  padding: 0.25;
+  margin: 0 0.5rem;
+}
+.blog-img {
+  width: 50px;
+  height: 50px;
+}
+@media (max-width: 980px) {
+  .footer-container {
+    grid-template-columns: 1fr;
+  }
 }
